# sql-schema

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: release.yml  rust.yml
src/: ast.rs  dialect.rs  diff.rs  lib.rs  migration.rs  name_gen.rs  parser.rs  path_template.rs
src/diff/: generic.rs
src/diff/generic/: statement.rs  tree.rs
src/migration/generic/: statement.rs  tree.rs
